--- a/final-notebooks/dam-impacts-on-protected-areas-calc-europe.ipynb
+++ b/final-notebooks/dam-impacts-on-protected-areas-calc-europe.ipynb
@@ -541,6 +541,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Turn europe dams from point to poly by buffering so that overlay function works\n",
+    "dams_all = dams_all.set_geometry('geometry').to_crs('epsg:4087')\n",
+    "dams_all['geometry'] = dams_all.buffer(50000)\n",
+    "              \n",
+    "# Overlay proposed dams on protected areas for selected continent to get ONLY dams that overlap PAs\n",
+    "europe_dams = gpd.overlay(\n",
+    "    dams_all, wdpa_ramsar_europe, how='intersection')\n",
+    "\n",
+    "# Overlay  protected areas on proposed dams for selected continent to get ONLY pas with dams\n",
+    "europe_pas_affected = gpd.overlay(\n",
+    "    wdpa_ramsar_europe, dams_all, how='intersection')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export to csv.\n",
+    "affected_dams_path = os.path.join(wd_path, \"europe_dams_affected.csv\" )\n",
+    "europe_dams.to_csv(affected_dams_path)\n",
+    "\n",
+    "# Export to csv.\n",
+    "affected_pas_path = os.path.join(wd_path, \"europe_pas_affected.csv\" )\n",
+    "europe_pas_affected.to_csv(affected_pas_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pas_with_dams_path = os.path.join(wd_path, \"europe_pas_with_dams.csv\" )\n",
+    "europe_pas_with_dams = gpd.sjoin(dams_all, wdpa_ramsar_europe, how=\"inner\", op='intersects')\n",
+    "europe_pas_with_dams.to_csv(pas_with_dams_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Get continent border for plotting\n",
     "eur_border = continent_borders[continent_borders['CONTINENT'] == \"Europe\"]\n",
     "\n",
@@ -645,6 +690,13 @@
     "plt.show()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
