--- a/final-notebooks/dam-impacts-on-protected-areas-calc-nam.ipynb
+++ b/final-notebooks/dam-impacts-on-protected-areas-calc-nam.ipynb
@@ -837,7 +837,7 @@
     "ax.legend(handles=[black_line, blue_line, yellow_line, orange_line, red_line, magenta_line, lightgreen_patch, black_dot],\n",
     "          fontsize=15,\n",
     "          frameon=True,\n",
-    "          loc=('lower right'),\n",
+    "          loc=('lower left'),\n",
     "          title=\"LEGEND\")"
    ]
   },
