--- a/final-notebooks/dam-impacts-on-protected-areas-calc-sam.ipynb
+++ b/final-notebooks/dam-impacts-on-protected-areas-calc-sam.ipynb
@@ -145,6 +145,29 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to get unique values\n",
+    "def unique(list1):\n",
+    " \n",
+    "    # intilize a null list\n",
+    "    unique_list = []\n",
+    "     \n",
+    "    # traverse for all elements\n",
+    "    for x in list1:\n",
+    "        # check if exists in unique_list or not\n",
+    "        if x not in unique_list:\n",
+    "            unique_list.append(x)\n",
+    "    # print list\n",
+    "    for x in unique_list:\n",
+    "        print(x)\n",
+    "    return unique_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -171,33 +194,6 @@
     "# Reproject data to World Equidistant Cylindrical, datum WGS84, units meters, EPSG 4087\n",
     "country_borders = country_borders.to_crs('epsg:4087')\n",
     "continent_borders = continent_borders.to_crs('epsg:4087')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Open the dams csv files with pandas\n",
-    "fname = os.path.join(\"earthpy-downloads\", \"future_dams_2015.csv\")\n",
-    "df = pd.read_csv(fname)\n",
-    "\n",
-    "# Covert the pandas dataframe to a shapefile for plotting\n",
-    "# Set output path for shp\n",
-    "dams_path = os.path.join('earthpy-downloads')\n",
-    "if not os.path.exists(dams_path):\n",
-    "    os.mkdir(dams_path)\n",
-    "\n",
-    "# Define the geometry for the points\n",
-    "geometry = [Point(xy) for xy in zip(df.Lon_Cleaned, df.LAT_cleaned)]\n",
-    "crs = {'init': 'epsg:4326'}\n",
-    "geo_df = gdf(df, crs=crs, geometry=geometry)\n",
-    "geo_df.to_file(driver='ESRI Shapefile', filename=os.path.join(\n",
-    "    dams_path, 'proposed_dams.shp'))\n",
-    "\n",
-    "# Open the proposed dams shapefile with geopandas\n",
-    "dams_all = gpd.read_file(os.path.join(dams_path, \"proposed_dams.shp\"))"
    ]
   },
   {
@@ -358,7 +354,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -523,15 +521,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get continent border for plotting\n",
-    "sam_border = continent_borders[continent_borders['CONTINENT'] == \"South America\"]\n",
+    "# Open the dams csv files with pandas\n",
+    "fname = os.path.join(\"earthpy-downloads\", \"future_dams_2015.csv\")\n",
+    "df = pd.read_csv(fname)\n",
     "\n",
-    "# Buffer rivers for nicer map\n",
-    "dor_0to5 = dor_0to5.buffer(5000)\n",
-    "dor_5to10 = dor_5to10.buffer(5000)\n",
-    "dor_10to15 = dor_10to15.buffer(5000)\n",
-    "dor_15to20 = dor_15to20.buffer(5000)\n",
-    "dor_over20 = dor_over20.buffer(5000)"
+    "# Covert the pandas dataframe to a shapefile for plotting\n",
+    "# Set output path for shp\n",
+    "dams_path = os.path.join('earthpy-downloads')\n",
+    "if not os.path.exists(dams_path):\n",
+    "    os.mkdir(dams_path)\n",
+    "\n",
+    "# Define the geometry for the points\n",
+    "geometry = [Point(xy) for xy in zip(df.Lon_Cleaned, df.LAT_cleaned)]\n",
+    "crs = {'init': 'epsg:4326'}\n",
+    "geo_df = gdf(df, crs=crs, geometry=geometry)\n",
+    "geo_df.to_file(driver='ESRI Shapefile', filename=os.path.join(\n",
+    "    dams_path, 'proposed_dams.shp'))\n",
+    "\n",
+    "# Open the proposed dams shapefile with geopandas\n",
+    "dams_all = gpd.read_file(os.path.join(dams_path, \"proposed_dams.shp\"))"
    ]
   },
   {
@@ -540,10 +548,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get continent dams for plotting\n",
-    "sam_dams = dams_all[dams_all['Continent'] == \"South America\"]\n",
+    "# Turn SAM dams from point to poly by buffering so that overlay function works\n",
+    "dams_all = dams_all.set_geometry('geometry').to_crs('epsg:4087')\n",
+    "dams_all['geometry'] = dams_all.buffer(50000)\n",
+    "              \n",
+    "# Overlay proposed dams on protected areas for selected continent to get ONLY dams that overlap PAs\n",
+    "sam_dams = gpd.overlay(\n",
+    "    dams_all, wdpa_ramsar_sa, how='intersection')\n",
     "\n",
-    "sam_dams = sam_dams.to_crs('epsg:4087')"
+    "# Overlay  protected areas on proposed dams for selected continent to get ONLY pas with dams\n",
+    "sam_pas_affected = gpd.overlay(\n",
+    "    wdpa_ramsar_sa, dams_all, how='intersection')"
    ]
   },
   {
@@ -552,42 +567,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot all rivers and all protected areas for selected continent\n",
-    "# Create legend\n",
-    "black_line = mlines.Line2D([], [], color='black', label='Country Border')\n",
-    "blue_line = mlines.Line2D([], [], color='blue', label='0 to 5')\n",
-    "yellow_line = mlines.Line2D([], [], color='yellow', label='5 to 10')\n",
-    "orange_line = mlines.Line2D([], [], color='orange', label='10 to 15')\n",
-    "red_line = mlines.Line2D([], [], color='red', label='15 to 20')\n",
-    "magenta_line = mlines.Line2D([], [], color='magenta', label='20 plus')\n",
-    "lightgreen_patch = mpatches.Patch(color='lightgreen', label='Protected Area')\n",
-    "black_dot = mlines.Line2D([], [], color='white', marker='o',\n",
-    "                          markerfacecolor='gray', label='Proposed Dam Site')\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(15, 15))\n",
-    "sam_border.plot(ax=ax, color=\"none\",  edgecolor=\"black\", linewidth=2)\n",
-    "wdpa_ramsar_sa.plot(ax=ax, color=\"lightgreen\", edgecolor='none')\n",
-    "dor_0to5.plot(ax=ax,\n",
-    "              color='blue', edgecolor='none')\n",
-    "dor_5to10.plot(ax=ax,\n",
-    "               color='yellow', edgecolor='none')\n",
-    "dor_10to15.plot(ax=ax,\n",
-    "                color='orange', edgecolor='none')\n",
-    "dor_15to20.plot(ax=ax,\n",
-    "                color='red', edgecolor='none')\n",
-    "dor_over20.plot(ax=ax,\n",
-    "                color='magenta', edgecolor='none')\n",
-    "sam_dams.plot(ax=ax,\n",
-    "                   color='gray', markersize=50)\n",
-    "ctx.add_basemap(ax, crs='epsg:4087')\n",
-    "ax.set_title(\n",
-    "    'All Protected Areas, Proposed Dams, And Large Rivers (Class > 2)\\n by Degree of Regulation in S. America', size=20)\n",
-    "ax.set_axis_off()\n",
-    "ax.legend(handles=[black_line, blue_line, yellow_line, orange_line, red_line, magenta_line, lightgreen_patch, black_dot],\n",
-    "          fontsize=15,\n",
-    "          frameon=True,\n",
-    "          loc=('lower right'),\n",
-    "          title=\"LEGEND\")"
+    "# Drop rows with NaN values\n",
+    "sam_pas_affected = sam_pas_affected[['NAME', 'PARENT_ISO', 'Shape_Area', 'continent', 'DAM_ID', 'Project na', 'Continent', 'Country', 'Main_river', 'Major Basi', 'Capacity (','LAT_cleane','Lon_Cleane','Stage','Start','End']]\n",
+    "sam_pas_affected.drop_duplicates(subset=['NAME', 'Project na'], keep='first', inplace=True)\n",
+    "sam_pas_affected.dropna(subset = ['NAME'], inplace=True) \n",
+    "sam_pas_affected = sam_pas_affected[sam_pas_affected['Continent'] == \"South America\"]\n",
+    "sam_pas_affected.columns = ['Protected_Area_Name', 'Country_ISO', 'Area_of_Protected_Area','Dam_ID', 'Dam_Project_Name', 'Continent', 'Country', 'Main_River', 'Major_Basin', 'Dam Capacity','Dam_Latitude','Dam_Longitude','Dam_Stage','Dam_StartDate','Dam_EndDate']"
    ]
   },
   {
@@ -596,35 +581,140 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax1 = plt.subplots(figsize=(20, 10))\n",
+    "# Export to csv.\n",
+    "sam_pas_dams_path = os.path.join(wd_path, \"sam_pas_dams_affected_50km.csv\" )\n",
+    "sam_pas_affected.to_csv(sam_pas_dams_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Get clean list of all PAs affected and all dams that overlap PAs\n",
+    "# sam_pas = unique(sam_pas_affected['NAME'])\n",
+    "# sam_pas = pd.DataFrame(sam_pas) \n",
+    "# sam_dams = unique(sam_dams['Project na'])\n",
+    "# sam_dams = pd.DataFrame(sam_dams) \n",
     "\n",
-    "plt.title(\"Potential River Reaches and Protected Areas in South America\\nImpacted by Future Dam Construction\", size=30)\n",
+    "# # Export to csv.\n",
+    "# affected_dams_path = os.path.join(wd_path, \"sam_dams_affected.csv\" )\n",
+    "# sam_dams.to_csv(affected_dams_path)\n",
     "\n",
-    "ax1.set_xlabel('Country')\n",
-    "ax1.set_ylabel('Area (sq. meters)', color='orange')\n",
-    "ax1.bar(sa_affected[\"Country\"],\n",
-    "        sa_affected[\"Affected_Area\"], color='orange', label=\"Land Area\")\n",
-    "ax1.tick_params(axis='y')\n",
+    "# # Export to csv.\n",
+    "# affected_pas_path = os.path.join(wd_path, \"sam_pas_affected.csv\" )\n",
+    "# sam_pas.to_csv(affected_pas_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Get continent border for plotting\n",
+    "# sam_border = continent_borders[continent_borders['CONTINENT'] == \"South America\"]\n",
     "\n",
-    "ax1.grid(False)\n",
+    "# # Buffer rivers for nicer map\n",
+    "# dor_0to5 = dor_0to5.buffer(5000)\n",
+    "# dor_5to10 = dor_5to10.buffer(5000)\n",
+    "# dor_10to15 = dor_10to15.buffer(5000)\n",
+    "# dor_15to20 = dor_15to20.buffer(5000)\n",
+    "# dor_over20 = dor_over20.buffer(5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Get continent dams for plotting\n",
+    "# sam_dams = dams_all[dams_all['Continent'] == \"South America\"]\n",
     "\n",
-    "ax2 = ax1.twinx()\n",
+    "# sam_dams = sam_dams.to_crs('epsg:4087')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Plot all rivers and all protected areas for selected continent\n",
+    "# # Create legend\n",
+    "# black_line = mlines.Line2D([], [], color='black', label='Country Border')\n",
+    "# blue_line = mlines.Line2D([], [], color='blue', label='0 to 5')\n",
+    "# yellow_line = mlines.Line2D([], [], color='yellow', label='5 to 10')\n",
+    "# orange_line = mlines.Line2D([], [], color='orange', label='10 to 15')\n",
+    "# red_line = mlines.Line2D([], [], color='red', label='15 to 20')\n",
+    "# magenta_line = mlines.Line2D([], [], color='magenta', label='20 plus')\n",
+    "# lightgreen_patch = mpatches.Patch(color='lightgreen', label='Protected Area')\n",
+    "# black_dot = mlines.Line2D([], [], color='white', marker='o',\n",
+    "#                           markerfacecolor='gray', label='Proposed Dam Site')\n",
+    "\n",
+    "# fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "# sam_border.plot(ax=ax, color=\"none\",  edgecolor=\"black\", linewidth=2)\n",
+    "# wdpa_ramsar_sa.plot(ax=ax, color=\"lightgreen\", edgecolor='none')\n",
+    "# dor_0to5.plot(ax=ax,\n",
+    "#               color='blue', edgecolor='none')\n",
+    "# dor_5to10.plot(ax=ax,\n",
+    "#                color='yellow', edgecolor='none')\n",
+    "# dor_10to15.plot(ax=ax,\n",
+    "#                 color='orange', edgecolor='none')\n",
+    "# dor_15to20.plot(ax=ax,\n",
+    "#                 color='red', edgecolor='none')\n",
+    "# dor_over20.plot(ax=ax,\n",
+    "#                 color='magenta', edgecolor='none')\n",
+    "# sam_dams.plot(ax=ax,\n",
+    "#                    color='gray', markersize=50)\n",
+    "# ctx.add_basemap(ax, crs='epsg:4087')\n",
+    "# ax.set_title(\n",
+    "#     'All Protected Areas, Proposed Dams, And Large Rivers (Class > 2)\\n by Degree of Regulation in S. America', size=20)\n",
+    "# ax.set_axis_off()\n",
+    "# ax.legend(handles=[black_line, blue_line, yellow_line, orange_line, red_line, magenta_line, lightgreen_patch, black_dot],\n",
+    "#           fontsize=15,\n",
+    "#           frameon=True,\n",
+    "#           loc=('lower right'),\n",
+    "#           title=\"LEGEND\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fig, ax1 = plt.subplots(figsize=(20, 10))\n",
+    "\n",
+    "# plt.title(\"Potential River Reaches and Protected Areas in South America\\nImpacted by Future Dam Construction\", size=30)\n",
+    "\n",
+    "# ax1.set_xlabel('Country')\n",
+    "# ax1.set_ylabel('Area (sq. meters)', color='orange')\n",
+    "# ax1.bar(sa_affected[\"Country\"],\n",
+    "#         sa_affected[\"Affected_Area\"], color='orange', label=\"Land Area\")\n",
+    "# ax1.tick_params(axis='y')\n",
+    "\n",
+    "# ax1.grid(False)\n",
+    "\n",
+    "# ax2 = ax1.twinx()\n",
     "\n",
     "\n",
-    "ax2.set_ylabel ('Length (km)', color='blue')\n",
-    "ax2.plot(sa_affected[\"Country\"],\n",
-    "        sa_affected[\"Affected_KM\"], marker='o', color='blue', markersize=10, linewidth=5, label=\"River Length\")\n",
-    "ax2.tick_params(axis='y')\n",
+    "# ax2.set_ylabel ('Length (km)', color='blue')\n",
+    "# ax2.plot(sa_affected[\"Country\"],\n",
+    "#         sa_affected[\"Affected_KM\"], marker='o', color='blue', markersize=10, linewidth=5, label=\"River Length\")\n",
+    "# ax2.tick_params(axis='y')\n",
     "\n",
-    "ax2.grid(False)\n",
+    "# ax2.grid(False)\n",
     "\n",
-    "ax2.text(0.5, -0.2,\n",
-    "        \"Data Source: Free Flowing Rivers Database, World Database of Protected Areas, and Ramsar Site Database\",\n",
-    "        size=12,\n",
-    "        ha=\"center\",\n",
-    "        transform=ax.transAxes)\n",
+    "# ax2.text(0.5, -0.2,\n",
+    "#         \"Data Source: Free Flowing Rivers Database, World Database of Protected Areas, and Ramsar Site Database\",\n",
+    "#         size=12,\n",
+    "#         ha=\"center\",\n",
+    "#         transform=ax.transAxes)\n",
     "\n",
-    "plt.show()\n",
+    "# plt.show()\n",
     "\n"
    ]
   },
